[package]
name = "blackjack"
version = "0.8.3"
edition = "2024"
authors = ["yoshitaka-k"]
description = "Blackjack"
license = "Apache-2.0"

[dependencies]
crossterm = "0.29.0"
csv = "1.4.0"
figlet-rs = "1.0.0"
indicatif = "0.18.4"
rand = "0.10.1"
regex = "1.12.3"
rustyline = "18.0.0"
serde = {version = "1.0.228", features = ["derive"]}
